Updated TMP dir

--- a/admin/bower.json
+++ b/admin/bower.json
@@ -2,7 +2,7 @@
   "name": "admin-src",
   "version": "0.0.1",
   "authors": [
-    "Pedro Casaubon <xperiments@gmail.com>"
+    "Pedro Casaubon"
   ],
   "license": "MIT",
   "private": true,
