--- a/admin/package.json
+++ b/admin/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
 	  "grunt": "~0.4.5",
 	  "grunt-ts": "~1.11.2",
-	  "load-grunt-tasks": "^0.4.0",
+	  "load-grunt-tasks": "^0.4.0"
   },
   "private":true
 }
