--- a/admin/package.json
+++ b/admin/package.json
@@ -1,15 +1,14 @@
 {
   "name": "cabinjs-admin-public",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "CabinJS simple CMS",
   "author": "Pedro Casaubon",
   "license": "MIT",
   "devDependencies": {
-	  "grunt": "~0.4.5",
-	  "grunt-ts": "~1.11.2",
-	  "load-grunt-tasks": "^0.4.0"
+    "grunt": "~0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ts": "~1.11.2",
+    "load-grunt-tasks": "^0.4.0"
   },
-  "private":true
+  "private": true
 }
-
-
